--- a/src/globals.css
+++ b/src/globals.css
@@ -91,6 +91,9 @@
 }
 
 @layer base {
+  html, body { /* Added html to ensure full height */
+    height: 100%;
+  }
   * {
     @apply border-border;
   }
